# ai-engineer-course

./: .cursorrules  .env-sample  .gitignore  CLAUDE.md  README.md  pyproject.toml  render.yaml
.claude/: settings.local.json
.claude/commands/: execute.md  prime.md
code/python/week-1/: 02_api_basics.py  03_prompt_patterns.py  04_structured_output.py  05_multimodal.py  06_production.py  06_tools.py  07_image_generation.py  07_tools.py  README.md  env-sample  pyproject.toml
code/python/week-2/: 02_workflows.py  03_agent_loop.py  04_agent_approval.py  04_agent_loop.py  README.md  pyproject.toml
code/python/week-3/: .env-sample  01_file_loading.py  02_embeddings.py  02_file_search.py  03_connection.py  03_vector_search.py  04_hybrid_search.py  04_vector_search.py  05_hybrid_search.py  06_agentic_rag.py  07_query_routing.py  08_reranking.py  README.md  docker-compose.yml  faqs.md  pyproject.toml
code/python/week-3/runbooks/: api-gateway.md  database-failover.md  kubernetes.md
code/python/week-4/: 01_agents_tools.py  01_project_setup.py  02_agent.py  02_structured_responses.py  03_fastapi_app.py  03_multi_turn.py  04_production.py  pyproject.toml
code/python/week-5/: .env-sample  01_langfuse_tracing.py  02_langfuse_pydanticai.py  pyproject.toml
code/python/week-6/: .dockerignore  03_queues.py  Dockerfile  docker-compose.yml  init.sql  main.py  pyproject.toml  requirements.txt
code/week-1/: 02_api_basics.py  03_prompt_patterns.py  04_structured_output.py  05_multimodal.py  06_production.py  07_tools.py  README.md  pyproject.toml
code/week-2/: 02_workflows.py  03_queues.py  04_agent_loop.py  05_state.py  README.md  pyproject.toml
code/week-3/: 02_embeddings.py  03_docling.py  04_pgvector.py  05_vector_search.py  06_hybrid_search.py  README.md  pyproject.toml
docs/: course.md  lesson-template.md  project-spec-template.md  writing-style-guide.md
module-1/: 1-introduction.py  1-setup.py  10-workflow-patterns.py  11-agent-architectures.py  2-api-basics.py  2-async.py  2-conversations.py  3-async.py  3-conversations.py  3-structured_output.py  4-async.py  4-structured_output.py  4-tools.py  5-streaming.py  5-structured_output.py  5-tools.py  6-agent.py  6-streaming.py  6-tools.py  7-agent.py  7-streaming.py  8-agent.py  8-memory.py  9-memory.py  env-sample  pyproject.toml
module-2/: 1-document-chunking.py  2-embeddings.py  3-chroma.py  4-rag-agent.py  pyproject.toml
project-1-terminal-agent/: agent.py  pyproject.toml  tools.py
project-1-terminal-agent/solution/: agent.py  tools.py
projects/week-1-timezone-agent/: .env-sample  README.md  agent.py  pyproject.toml
projects/week-1-timezone-agent/tests/: conftest.py  test_tools.py
projects/week-2-email-classifier/: .env-sample  README.md  gmail.py  pipeline.py  pyproject.toml
projects/week-3-doc-search/: .env-sample  README.md  app.py  db.py  ingest.py  pyproject.toml  search.py
projects/week-3-doc-search/docker/: docker-compose.yml  init.sql
projects/week-3-doc-search/docs/: acme_employee_handbook.md  getting_started.md
projects/week-4-hr-agent/: .env-sample  README.md  docker-compose.yml  ingest.py  pyproject.toml  schema.sql  simple_agent.py
projects/week-4-hr-agent/app/: __init__.py  agent.py  config.py  database.py  embeddings.py  main.py  models.py  routes.py  search.py
projects/week-4-hr-agent/app/agent/: __init__.py  core.py  embeddings.py  prompts.py
projects/week-4-hr-agent/app/api/: routes.py
projects/week-4-hr-agent/app/db/: __init__.py
projects/week-4-hr-agent/app/models/: __init__.py  schemas.py
projects/week-4-hr-agent/docker/: docker-compose.yml  init.sql
projects/week-4-hr-agent/docs/: accounts.md  benefits_guide.md  billing.md  employee_handbook.md  expense_policy.md  integrations.md  product_roadmap.md  remote_work_policy.md  troubleshooting.md  vacation_policy.md
projects/week-4-hr-agent/static/: index.html  style.css
projects/week-4-hr-agent/templates/: chat.html
projects/week-4-rag-chatbot/: .env-sample  .env.example  .gitignore  Makefile  README.md  ROADMAP.md  docker-compose.yml  init.sql  render.yaml
projects/week-4-rag-chatbot/.claude/: settings.local.json
projects/week-4-rag-chatbot/.claude/agents/: security-agent.md
projects/week-4-rag-chatbot/backend/: .env-sample  Dockerfile  pyproject.toml
projects/week-4-rag-chatbot/backend/app/: config.py  database.py  main.py
projects/week-4-rag-chatbot/backend/app/agent/: agent.py  router.py
projects/week-4-rag-chatbot/backend/app/api/: chat.py
projects/week-4-rag-chatbot/backend/app/schemas/: chat.py
projects/week-4-rag-chatbot/backend/app/services/: embeddings.py  search.py
projects/week-4-rag-chatbot/backend/scripts/: ingest.py  init_db.py
projects/week-4-rag-chatbot/backend/tests/: test_router.py
projects/week-4-rag-chatbot/docs/: account-membership.md  contact-support.md  orders-payments.md  products-sizing.md  returns-refunds.md  shipping-delivery.md
projects/week-4-rag-chatbot/frontend/: Dockerfile  package.json
projects/week-4-rag-chatbot/frontend/src/app/: globals.css  layout.tsx  page.tsx
projects/week-4-rag-chatbot/frontend/src/components/: ChatMessage.tsx  Sources.tsx
projects/week-4-rag-chatbot/frontend/src/components/ui/: card.tsx
src/01-introduction/: 1-client.py  3-structured-output.py  4-function_calling.py
src/02-rag-foundation/: 2-embeddings.py  4-rag-agent.py
src/03-ai-agents/: agent.py
src/project-1/: 1-client.py  2-async-client.py  3-structured-output.py  4-function_calling.py  5-memory.py  policy.md
