[project]
name = "ai-engineer-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.1.0",
    "docling>=2.0.0",
    "ipykernel",
    "openai",
    "requests",
    "tiktoken",
]

[tool.pyright]
typeCheckingMode = "basic"  # or "off" or "strict"
