[project]
name = "module-1-llm-fundamentals"
version = "0.1.0"
description = "Module 1: LLM Fundamentals - Build AI agents from first principles"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0.0",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"

[tool.pyright]
typeCheckingMode = "basic"
