[project]
name = "module-2-rag-foundations"
version = "0.1.0"
description = "Module 2: RAG Foundations - Build retrieval-augmented generation systems"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0.0",
    "chromadb>=1.0.0",
    "tiktoken>=0.5.0",
    "docling>=2.0.0",
]

[tool.pyright]
typeCheckingMode = "basic"

