[project]
name = "week-3-doc-search"
version = "0.1.0"
description = "Document search CLI demonstrating RAG with PostgreSQL"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0.0",
    "tiktoken>=0.5.0",
    "psycopg[binary]>=3.0.0",
    "pgvector>=0.3.0",
    "docling>=2.0.0",
    "python-dotenv>=1.0.0",
    "chainlit>=1.0.0",
]
