[project]
name = "week-4-hr-agent"
version = "1.0.0"
description = "HR Policy Agent with PydanticAI and production RAG"
requires-python = ">=3.11"
dependencies = [
    "pydantic-ai>=0.0.30",
    "openai>=1.0.0",
    "tiktoken>=0.5.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "docling>=2.0.0",
    "psycopg[binary]>=3.1.0",
    "pgvector>=0.2.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "jinja2>=3.1.0",
]

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.0.0",
    "httpx>=0.27.0",
    "pytest>=8.0.0",
]
