[project]
name = "rag-chatbot"
version = "0.1.0"
description = "RAG Chatbot with PydanticAI"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "psycopg[binary]>=3.2.0",
    "pgvector>=0.4.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "pydantic-ai>=0.0.27",
    "openai>=1.60.0",
    "sse-starlette>=2.2.0",
    "tiktoken>=0.8.0",
    "docling>=2.15.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ipykernel>=6.29.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
